--- a/CSS-30day-UI-Reference.html
+++ b/CSS-30day-UI-Reference.html
@@ -1876,7 +1876,8 @@
 
   <div class="tip-box">
     <div class="tip"><strong>Tip:</strong> Combine flex and grid — <strong>grid</strong> for layout,
-      <strong>flex</strong> inside cards.</div>
+      <strong>flex</strong> inside cards.
+    </div>
   </div>
 
   <div class="projects-grid">
