--- a/ass1.html
+++ b/ass1.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ass1</title>
+    <style>
+        body{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        div {
+            height: 10rem;
+            width: 20rem;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            border: 1px dashed #2a2a4a;
+            border-radius: 4px;
+        }
+
+        div div {
+            height: 2.5rem;
+            width: 7rem;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid #6C63FF;
+            border-radius: 4px;
+            background-color: #6C63FF;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div>
+        <div><span style="color: white;">Click Me</span></div>
+    </div>
 </body>
+
 </html>
